more file uploader changes

--- a/public/features/file-uploader/file-uploader.html
+++ b/public/features/file-uploader/file-uploader.html
@@ -1,55 +1,58 @@
-<div ng-controller="FileUploaderController as fupc" nv-file-drop="" uploader="fupc.uploader" filters="queueLimit, customFilter">
+<!-- 1. nv-file-drop="" uploader="{Object}" options="{Object}" filters="{String}" -->
+<div ng-controller="FileUploaderController" nv-file-drop="" uploader="uploader" filters="queueLimit, customFilter">
 
     <div class="container">
-
         <div class="row">
+            <!-- Example: nv-file-select="" uploader="{Object}" options="{Object}" filters="{String}" -->
+            Multiple
+            <input type="file" nv-file-select="" uploader="uploader" multiple  /><br/>
 
+            Single
+            <input type="file" nv-file-select="" uploader="uploader" />
+        </div>
+
+        <div class="row ">
+
+            <div class="col-md-2">
 
                 <h3>Select files</h3>
 
-                <div ng-show="fupc.uploader.isHTML5">
+                <div ng-show="uploader.isHTML5">
                     <!-- 3. nv-file-over uploader="link" over-class="className" -->
-                    <div class="well my-drop-zone" nv-file-over="" uploader="fupc.uploader">
+                    <div class="well upldr-drop-zone" nv-file-over="" uploader="uploader">
                         Base drop zone
                     </div>
 
                     <!-- Example: nv-file-drop="" uploader="{Object}" options="{Object}" filters="{String}" -->
-                    <div nv-file-drop="" uploader="fupc.uploader" options="{ url: '/foo' }">
-                        <div nv-file-over="" uploader="fupc.uploader" over-class="another-file-over-class" class="well my-drop-zone">
+                    <div nv-file-drop="" uploader="uploader" options="{ url: '/foo' }">
+                        <div nv-file-over="" uploader="uploader" over-class="another-file-over-class" class="well my-drop-zone">
                             Another drop zone with its own settings
                         </div>
                     </div>
                 </div>
 
-                <!-- Example: nv-file-select="" uploader="{Object}" options="{Object}" filters="{String}" -->
-                Multiple
-                <input type="file" nv-file-select="" uploader="fupc.uploader" multiple  /><br/>
+            </div>
 
-                Single
-                <input type="file" nv-file-select="" uploader="fupc.uploader" />
-        </div>
-        <div class="row">
-
-            <div style="margin-bottom: 40px">
+            <div class="col-md-7" style="margin-bottom: 40px">
 
                 <h3>Upload queue</h3>
-                <p>Queue length: {{ fupc.uploader.queue.length }}</p>
+                <p>Queue length: {{ uploader.queue.length }}</p>
 
-                <table class="table">
+                <table class="table upldr-table">
                     <thead>
                     <tr>
                         <th width="50%">Name</th>
-                        <th ng-show="fupc.uploader.isHTML5">Size</th>
-                        <th ng-show="fupc.uploader.isHTML5">Progress</th>
+                        <th ng-show="uploader.isHTML5">Size</th>
+                        <th ng-show="uploader.isHTML5">Progress</th>
                         <th>Status</th>
                         <th>Actions</th>
                     </tr>
                     </thead>
                     <tbody>
-                    <tr ng-repeat="item in fupc.uploader.queue">
+                    <tr ng-repeat="item in uploader.queue">
                         <td><strong>{{ item.file.name }}</strong></td>
-                        <td ng-show="fupc.uploader.isHTML5" nowrap>{{ item.file.size/1024/1024|number:2 }} MB</td>
-                        <td ng-show="fupc.uploader.isHTML5">
+                        <td ng-show="uploader.isHTML5" nowrap>{{ item.file.size/1024/1024|number:2 }} MB</td>
+                        <td ng-show="uploader.isHTML5">
                             <div class="progress" style="margin-bottom: 0;">
                                 <div class="progress-bar" role="progressbar" ng-style="{ 'width': item.progress + '%' }"></div>
                             </div>
@@ -78,16 +81,16 @@
                     <div>
                         Queue progress:
                         <div class="progress" style="">
-                            <div class="progress-bar" role="progressbar" ng-style="{ 'width': fupc.uploader.progress + '%' }"></div>
+                            <div class="progress-bar" role="progressbar" ng-style="{ 'width': uploader.progress + '%' }"></div>
                         </div>
                     </div>
-                    <button type="button" class="btn btn-success btn-s" ng-click="fupc.uploader.uploadAll()" ng-disabled="!fupc.uploader.getNotUploadedItems().length">
+                    <button type="button" class="btn btn-success btn-s" ng-click="uploader.uploadAll()" ng-disabled="!uploader.getNotUploadedItems().length">
                         <span class="glyphicon glyphicon-upload"></span> Upload all
                     </button>
-                    <button type="button" class="btn btn-warning btn-s" ng-click="fupc.uploader.cancelAll()" ng-disabled="!fupc.uploader.isUploading">
+                    <button type="button" class="btn btn-warning btn-s" ng-click="uploader.cancelAll()" ng-disabled="!uploader.isUploading">
                         <span class="glyphicon glyphicon-ban-circle"></span> Cancel all
                     </button>
-                    <button type="button" class="btn btn-danger btn-s" ng-click="fupc.uploader.clearQueue()" ng-disabled="!fupc.uploader.queue.length">
+                    <button type="button" class="btn btn-danger btn-s" ng-click="uploader.clearQueue()" ng-disabled="!uploader.queue.length">
                         <span class="glyphicon glyphicon-trash"></span> Remove all
                     </button>
                 </div>
@@ -95,6 +98,5 @@
             </div>
 
         </div>
-
     </div>
 </div>
