--- a/public/features/common/header.html
+++ b/public/features/common/header.html
@@ -3,6 +3,7 @@
         <navbar></navbar>
     </div>
     <div class="flex-container">
+        <animated-bird class="bird"></animated-bird>
         <div class="parallax parallax-0"></div>
         <div class="parallax parallax-1"></div>
         <div class="parallax parallax-2"></div>
