--- a/public/features/parish-council/parish-council-home.html
+++ b/public/features/parish-council/parish-council-home.html
@@ -1,5 +1,46 @@
-<div class="text-content flex-container flex-container-row">
-    <div class="text-block">
-        Some general stuff about PCs
+<div class="text-content flex-container flex-container-row flex-cols">
+    <div>
+        <h4 class="text-red-900">What is the Role of a Parish Council?</h4>
     </div>
 </div>
+
+<div class="text-content flex-container flex-container-row flex-cols">
+    <div>
+        The 1965 Royal Commission on Local Government (The Redcliffe-Maude Commission) recommended that local
+        councils should be empowered to do what they pleased for the benefit of their people, and a consequence
+        of this was the very important 1972 Local Government Act which removed many of the restrictions on the
+        activities of parish councils. For example, before the 1972 Act, parish councils couldn’t save money
+        from one year to the next in order to fund a major project.
+    </div>
+</div>
+
+<div class="text-content flex-container flex-container-row flex-cols">
+    <div>
+        Something all councils have to do these days to avoid having a massive council tax for each year that
+        anything new is attempted. Subsequent legislation has added to parish council powers and now
+        local councils can undertake any of the following things:-<br><br>
+    </div>
+</div>
+<div class=" flex-container flex-container-column flex-list">
+    <div>The provision of allotments.</div>
+    <div>Developing and improving knowledge of the arts and crafts.</div>
+    <div>Provision of bars and launderettes.</div>
+    <div>Cemeteries, crematoria, maintenance of churchyards and the provision of mortuaries.</div>
+    <div>Provision and maintenance of public clocks.</div>
+    <div>Provision of any form of public entertainment and of any premises for giving entertainments; this includes maintaining bands or orchestras and providing for dancing.</div>
+    <div>The provision of buildings for public meetings and functions, indoor sports, physical recreation, for clubs having recreation, social or athletic objectives.</div>
+    <div>The provision and maintenance of footway lighting, which lights roads and pavements.</div>
+    <div>The provision of litter bins and the support of anti-litter campaigns.</div>
+    <div>The provision and maintenance of public open spaces, pleasure grounds and public walks, public lavatories, car parks, cycle parks, public parks and associated facilities.</div>
+    <div>Maintenance of public footpaths and bridleways, planting and maintaining road side verges.</div>
+    <div>Maintenance of public seats, shelters for general public use and particularly for bus passengers, erection of signs which warn of dangers, renounce a place name or indicate a bus stop.</div>
+    <div>Provision of indoor or outdoor swimming pools or bathing places.</div>
+    <div>Provision of facilities for conferences, the encouragement of recreation and business tourism.</div>
+    <div>Powers to maintain a village or town green.</div>
+    <div>In addition to all those things, a parish council can do anything, provided it is for the general benefit of the community, and that the expenditure in any one year does not exceed £5.30 per local government
+        elector in that particular parish or community. But indeed, most things
+        that the parish council might wish to do or hope to do could be covered
+        by other legislation for which expenditure is unlimited. The only
+        limit being imposed is that of the reluctance of parishioners to pay. </div>
+</div>
+
