--- a/public/features/village-hall/village-hall-3.html
+++ b/public/features/village-hall/village-hall-3.html
@@ -1,10 +1,13 @@
 <div ng-controller="VillageHallController as vhc" class="flex-container flex-container-row">
     <div style="width: 800px">
-        <h1 class="text-center">Under Construction</h1>
+        <h1 class="text-center">Book the Village Hall</h1>
         <br>
         <div class="row">
-            We plan to manage hall bookings using a shared google calendar.
-
+           We're in the process of registering with Google Non-Profits, which (amongst other things) will allow us to
+           utilise services such as Gmail and Google calendar, to better manage village hall bookings. You will shortly
+            be able to visit this page to view the bookings diary and/or provisionally book the hall.<br><br>
+           While this page is under construction, please contact Karen Butt (tel. 01453 834696 / email:
+            bookings@HorsleyParish.co.uk)
         </div>
     </div>
 </div>
