Changes to village hall pages

--- a/public/features/village-hall/village-hall-1.html
+++ b/public/features/village-hall/village-hall-1.html
@@ -1,27 +1,35 @@
 <div class="text-content flex-container flex-container-row flex-cols">
-    <div>
-        <img src="/web/features/village-hall/img/218_1.jpg" width="300" height="144">
-    </div>
-    <div>
-        <h4 class="text-red-900">The village hall is available to hire on an hourly basis for both private
-        and public events.</h4>
-        The premises has capacity for 140 people standing and about 100 sitting. It has a fully equipped
-        kitchen, chairs and tables for 120, toilets, a collapsible stage and facilities for stage lighting.
-        <i>Click the facilities tab for further details</i><br>
-    </div>
-</div>
+    <div class="vh_bg_cabaret">
+        <h2 class="text-red-900">The village hall is available to hire on an hourly basis for both private
+            and public events.</h2>
+        <div class="text-content flex-container flex-container-row flex-cols">
+            <div>
+                <img src="/web/features/village-hall/img/vh_dancing.jpg" width="300">
+            </div>
+            <div>
+                <h4><b>The premises has capacity for 140 people standing and about 100 sitting. It has a fully equipped
+                kitchen, chairs and tables for 120, toilets, a collapsible stage and facilities for stage lighting.
+                <i>Click the facilities tab for further details</i></b><br><br>
 
-<div class="text-content flex-container flex-container-row flex-cols">
-    <div>
-        <img src="/web/features/village-hall/img/261_1.jpg" width="600px">
-    </div>
-    <div>
-        <h3>
-            Horsley Village Hall<br>
-            Priory Fields<br>
-            Horsley<br>
-            Gloucestershire<br>
-            GL6 0PT
-        </h3>
+                    Horsley Village Hall<br>
+                    Priory Fields<br>
+                    Horsley<br>
+                    Gloucestershire<br>
+                    GL6 0PT
+                </h4>
+
+            </div>
+        </div>
+
+        <div class="text-content flex-container flex-container-row flex-cols">
+            <div><img src="/web/features/village-hall/img/261_1.jpg" height="200px"></div>
+            <div><img src="/web/features/village-hall/img/vh_rear_garden.jpg" height="200px"></div>
+        </div>
+        <div class="text-content flex-container flex-container-row flex-cols">
+            <div><img src="/web/features/village-hall/img/vh_kitchen.jpg" height="200px"></div>
+            <div><img src="/web/features/village-hall/img/vh_main_hall.jpg" height="200px"></div>
+            <div><img src="/web/features/village-hall/img/vh_party.jpg" height="200px"></div>
+        </div>
+
     </div>
 </div>
