--- a/public/features/village-hall/village-hall-3.html
+++ b/public/features/village-hall/village-hall-3.html
@@ -1,10 +1,10 @@
 <div ng-controller="VillageHallController as vhc" class="flex-container flex-container-row">
     <div style="width: 800px">
-        <h1 class="text-center">Under Construction</h1>
+        <h3 class="text-center">How to Book the Village Hall</h3>
         <br>
         <div class="row">
-            We plan to manage hall bookings using a shared google calendar.
-
+            We will be introducing an on-line booking calendar/diary shortly.
+            In the meantime, if you wish to book the hall then please contact Karen Butt (<a href="mailto:bookings@horsleyparish.co.uk">bookings@horsleyparish.co.uk</a>).
         </div>
     </div>
 </div>
