--- a/public/features/village-hall/village-hall-4.html
+++ b/public/features/village-hall/village-hall-4.html
@@ -19,11 +19,11 @@
                         <div class="value">Click the <a href="/web#/village-hall?page=3">Booking</a> tab to make a booking</div>
                     </div>
                     <div><div class="vh-label">Contact telephone</div><div class="value">Karen Butt (01453 834696)</div></div>
-                    <div><div class="vh-label">Contact email</div><div class="value">Bookings@HorsleyParish.co.uk</div></div>
+                    <div><div class="vh-label">Contact email</div><div class="value"><a href="mailto:Bookings@HorsleyParish.co.uk">Bookings@HorsleyParish.co.uk</a></div></div>
                     <br />
                     <div class="vh-h2">Maintenance & Administration</div>
                     <div><div class="vh-label">Contact telephone</div><div class="value">Jon Stride (01453 834026)</div></div>
-                    <div><div class="vh-label">Contact email</div><div class="value">VHC@HorsleyParish.co.uk</div></div>
+                    <div><div class="vh-label">Contact email</div><div class="value"><a href="mailto:VHC@jonstride.co.uk">VHC@jonstride.co.uk</a></div></div>
                     <br />
                     <div class="vh-h2">Rooms</div>
                     <div><div class="vh-label">Main Room Area(metres squared)</div><div class="value">240.0</div></div>
