--- a/public/features/community-shop/shop.html
+++ b/public/features/community-shop/shop.html
@@ -53,4 +53,8 @@
             The emails may also include news from the shop.
         </div>
     </div>
+    <div class="flex-container flex-container-row cs-shop">
+        <div><img src="/web/features/community-shop/img/shop_inside1.jpg" height="250px"></div>
+        <div><img src="/web/features/community-shop/img/shop_front.jpg" height="250px"></div>
+    </div>
 </div>
