--- a/public/features/village-hall/village-hall-1.html
+++ b/public/features/village-hall/village-hall-1.html
@@ -26,9 +26,21 @@
             <div><img src="/web/features/village-hall/img/vh_rear_garden.jpg" height="200px"></div>
         </div>
         <div class="text-content flex-container flex-container-row flex-cols">
-            <div><img src="/web/features/village-hall/img/vh_kitchen.jpg" height="200px"></div>
-            <div><img src="/web/features/village-hall/img/vh_main_hall.jpg" height="200px"></div>
-            <div><img src="/web/features/village-hall/img/vh_party.jpg" height="200px"></div>
+            <div>
+                <a href="/web/features/village-hall/img/vh_kitchen.jpg">
+                    <img src="/web/features/village-hall/img/vh_kitchen.jpg" height="200px">
+                </a>
+                </div>
+            <div>
+                <a href="/web/features/village-hall/img/vh_main_hall.jpg">
+                    <img src="/web/features/village-hall/img/vh_main_hall.jpg" height="200px">
+                </a>
+            </div>
+            <div>
+                <a href="/web/features/village-hall/img/setting_up.jpg">
+                    <img src="/web/features/village-hall/img/setting_up.jpg" height="200px">
+                </a>
+            </div>
         </div>
 
     </div>
