--- a/public/features/parish-council/parish-council-home.html
+++ b/public/features/parish-council/parish-council-home.html
@@ -1,46 +1,182 @@
-<div class="text-content flex-container flex-container-row flex-cols">
+<div class="text-content flex-container flex-container-row">
     <div>
-        <h4 class="text-red-900">What is the Role of a Parish Council?</h4>
+        <h4>What is a Parish Council?</h4>
     </div>
 </div>
 
 <div class="text-content flex-container flex-container-row flex-cols">
     <div>
-        The 1965 Royal Commission on Local Government (The Redcliffe-Maude Commission) recommended that local
-        councils should be empowered to do what they pleased for the benefit of their people, and a consequence
-        of this was the very important 1972 Local Government Act which removed many of the restrictions on the
-        activities of parish councils. For example, before the 1972 Act, parish councils couldn’t save money
-        from one year to the next in order to fund a major project.
+        A parish council is a local authority that makes decisions on behalf of the people in the parish.
+        It is the level government closest to the community, with the district authority (<a href="http://www2.stroud.gov.uk/cmislive_public/ParishCouncils.aspx">
+        Stroud District Council</a>) above it in the hierarchy.
+    </div>
+    <div>
+
+    </div>
+</div>
+<div class="text-content flex-container flex-container-row flex-cols">
+    <div>
+        If you’ve never been to a parish council meeting before, you may be forgiven for thinking that
+        your parish councillors are just a group of (probably older) people who meet now and then in the village
+        village hall to discuss matters that rarely concern you. If however.... <br><br>
+        <ul>
+            <li>You've been involved in any planning applications inside the Parish</li>
+            <li>You've volunteered at the community shop</li>
+            <li>You helped to raise money for (and/or help build) the pavilion</li>
+            <li>You've used the playing fields</li>
+            <li>You've hired the village hall</li>
+            <li>You've followed the development and re-opening of The Hog (formerly the Bell & Castle) pub</li>
+        </ul>
+        ....then you’ll know that the PC has an important role to play within the community.
+    </div>
+</div>
+<div class="text-content flex-container flex-container-row flex-cols">
+    <div>
+        <h4>Why become a Parish Councillor?</h4>
+    </div>
+</div>
+<div class="text-content flex-container flex-container-row flex-cols">
+    <div>
+        By becoming a parish councillor you become someone your community will look to for help, guidance
+        and support. A community leader with the power to influence decisions for the benefit of the people
+        you serve.  Seeing your community change for the better, as a result of decisions you have helped
+        make, is something that can give you a sense of achievement and pride.<br>
+        If you feel under-represented in local government, or that decision are being made outside of your
+        control, or perhaps you just want to affect changes or give something back to the community, then
+        joining the Parish Council is an excellent way to get involved.
+    </div>
+</div>
+<div class="text-content flex-container flex-container-row flex-cols">
+    <div>
+        <h4>What decisions do Parish Councils make?</h4>
+    </div>
+</div>
+<div class="text-content flex-container flex-container-row flex-cols">
+    <div>
+        Parish councils make all kinds of decisions on issues that affect the local community.  Probably the
+        most common topics that parish councils get involved with are planning matters (they are statutory
+        consultees), crime prevention, managing open spaces and campaigning for and delivering better
+        services and facilities.
+        <br><br>
+        It’s true to say that on their own, parish councils have limited powers to make decisions.  But they
+        do have the ability to negotiate with, and the power to influence, those other organisations that
+        do make the final decisions (such as the borough council, health authorities, police etc).
+        <br><br>
+        In this respect parish councils are extremely powerful.  The organisations that make the final
+        decisions know that a parish council gives the best reflection of how a community feels about something,
+        and its views will be taken seriously.
+        <br><br>
+        We have a fantastically active and vibrant community, so in many cases the role of the PC has
+        been to help bring people together. It is groups of local volunteers who often
+        go on to achieve the most, but the PC is always available for help, support and guidance.
+    </div>
+    <div>
+        <a href="/web/features/parish-council/img/horsley-village.jpg">
+            <img src="/web/features/parish-council/img/horsley-village.jpg" height="300px">
+        </a>
+    </div>
+</div>
+<div class="text-content flex-container flex-container-row flex-cols">
+    <div>
+        <h4>How much time does it take up?</h4>
+    </div>
+</div>
+<div class="text-content flex-container flex-container-row flex-cols">
+    <div>
+        The PC meet 12 times a year, usually on the 4th Tuesday of each month, and members of the public are
+        welcome to attend. Meetings typically last two to three hours, depending on the scope fo the agenda.
+        Some councillors may be asked to represent the parish council at other community meetings or events,
+        or to follow up on specific action items (raised during a meeting) but these won’t take up a great
+        deal of your time.
+    </div>
+</div>
+<div class="text-content flex-container flex-container-row flex-cols">
+    <div>
+        <h4>How long does a parish councillor serve for?</h4>
+    </div>
+</div>
+<div class="text-content flex-container flex-container-row flex-cols">
+    <div>
+        Once elected, parish councillors sit on the council for a maximum of four years.  If they then
+        want to stay in the post they can stand for re-election.
+    </div>
+</div>
+<div class="text-content flex-container flex-container-row flex-cols">
+    <div>
+        <h4>Am I eligible to be a Parish Councillor?</h4>
+    </div>
+</div>
+<div class="text-content flex-container flex-container-row flex-cols">
+    <div>
+        To stand for election on a parish council, you must:<br>
+        <ul>
+            <li>be a UK or commonwealth citizen, or;</li>
+            <li>be a citizen of the Republic of Ireland, or;</li>
+            <li>be a citizen of another Member state of the European Union;</li>
+            <li>be a least 18 years old.</li>
+        </ul>
+        <br>
+        To be eligible to stand for an election for the parish, you must:<br>
+        <ul>
+            <li>be an elector of the parish, or;</li>
+            <li>for the whole of the previous 12 months have occupied (as owner or tenant) land or
+                other premises in the parish, or;</li>
+            <li>during the previous 12 months have worked in the parish (as your principal or only place
+                of work), or;</li>
+            <li>for the whole of the previous 12 months lived in the parish or within three miles of the
+                parish boundary.</li>
+        </ul>
+        <br>
+        You don’t have to be connected to a political party.<br>
+        If you do become a parish councillor you will have to sign up to the Code of Conduct.
+    </div>
+</div>
+<div class="text-content flex-container flex-container-row flex-cols">
+    <div>
+        <h4>What powers do parish councils have?</h4>
+    </div>
+</div>
+<div class="text-content flex-container flex-container-row flex-cols">
+    <div>
+        <a href="/web/features/parish-council/img/playing-fields.jpg">
+            <img src="/web/features/parish-council/img/playing-fields.jpg" height="200px">
+        </a>
+    </div>
+    <div>
+        They have a wide range of powers which essentially related to local matters, such as looking
+        after community buildings, open space, allotments, play areas, street lighting, bus shelters,
+        car parks and much more.  The council also has the power to raise money through taxation,
+        the precept.  The precept is the parish council’s share of the council tax.  The precept demand
+        goes to the billing authority, the district council, which collects the tax for the parish council.
+    </div>
+    <div>
+        <a href="/web/features/parish-council/img/playground.jpg">
+            <img src="/web/features/parish-council/img/playground.jpg" height="200px">
+        </a>
+    </div>
+</div>
+<div class="text-content flex-container flex-container-row flex-cols">
+    <div>
+        <h4>Parish Duties</h4>
+    </div>
+</div>
+<div class="text-content flex-container flex-container-row flex-cols">
+    <div>
+        The duties and functions of the parish council are many and varied. They meet monthly and consider
+        planning applications and any other matters referred to it by local residents, Stroud DC and
+        by central government.  All meetings are open to the public and there is a forum before the start
+        of the meeting at which members of the public can raise concerns and ask questions.  There is also
+        an annual meeting which all parishioners are invited to attend.  All meetings are advertised on the
+        council notice boards.  Residents can bring to the attention of the parish council anything that
+        concerns them, either directly or though the clerk.  If matters raised are not the responsibility
+        of the council, the clerk can bring them to the attention of the proper authority.
+        <br><br>
+        Don’t take our word for it!
+        <br>
+        The best way to find out what it’s like to be a parish councillor is to talk to someone who’s
+        doing it now.  Come along to a parish council meeting, or speak to one of our councillors and find
+        out what they think of the job.
     </div>
 </div>
 
-<div class="text-content flex-container flex-container-row flex-cols">
-    <div>
-        Something all councils have to do these days to avoid having a massive council tax for each year that
-        anything new is attempted. Subsequent legislation has added to parish council powers and now
-        local councils can undertake any of the following things:-<br><br>
-    </div>
-</div>
-<div class=" flex-container flex-container-column flex-list">
-    <div>The provision of allotments.</div>
-    <div>Developing and improving knowledge of the arts and crafts.</div>
-    <div>Provision of bars and launderettes.</div>
-    <div>Cemeteries, crematoria, maintenance of churchyards and the provision of mortuaries.</div>
-    <div>Provision and maintenance of public clocks.</div>
-    <div>Provision of any form of public entertainment and of any premises for giving entertainments; this includes maintaining bands or orchestras and providing for dancing.</div>
-    <div>The provision of buildings for public meetings and functions, indoor sports, physical recreation, for clubs having recreation, social or athletic objectives.</div>
-    <div>The provision and maintenance of footway lighting, which lights roads and pavements.</div>
-    <div>The provision of litter bins and the support of anti-litter campaigns.</div>
-    <div>The provision and maintenance of public open spaces, pleasure grounds and public walks, public lavatories, car parks, cycle parks, public parks and associated facilities.</div>
-    <div>Maintenance of public footpaths and bridleways, planting and maintaining road side verges.</div>
-    <div>Maintenance of public seats, shelters for general public use and particularly for bus passengers, erection of signs which warn of dangers, renounce a place name or indicate a bus stop.</div>
-    <div>Provision of indoor or outdoor swimming pools or bathing places.</div>
-    <div>Provision of facilities for conferences, the encouragement of recreation and business tourism.</div>
-    <div>Powers to maintain a village or town green.</div>
-    <div>In addition to all those things, a parish council can do anything, provided it is for the general benefit of the community, and that the expenditure in any one year does not exceed £5.30 per local government
-        elector in that particular parish or community. But indeed, most things
-        that the parish council might wish to do or hope to do could be covered
-        by other legislation for which expenditure is unlimited. The only
-        limit being imposed is that of the reluctance of parishioners to pay. </div>
-</div>
 
