--- a/public/features/parish-council/parish-council-meetings.html
+++ b/public/features/parish-council/parish-council-meetings.html
@@ -1,4 +1,6 @@
 <div>
+    <div><img src="/web/features/parish-council/img/minutes.png"></div>
+
     <div layout="row" style="display: flex; width: 900px; margin: 0 auto;">
             <div flex="33"></div>
             <div flex="33">
